...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tasklist_title_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Your Heading"
                        android:textAppearance="?android:textAppearanceLarge" />

                    <TextView
...
