<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/taskDefaultMenu">
        <item
            android:id="@+id/logout"
            android:title="Logout" />

        <item
            android:id="@+id/delete"
            android:title="Delete" />

        <item
            android:id="@+id/add"
            android:icon="@drawable/add"
            android:title="Add"
            app:showAsAction="ifRoom"/>
    </group>

    <group
        android:id="@+id/taskDeleteMenu">
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_trash"
            android:title="Trash"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/cancel_delete"
            android:title="Cancel"
            app:showAsAction="ifRoom"/>

    </group>

</menu>