<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/taskParentWithCheckBox">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:id="@+id/taskCheckbox"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Name"
        android:layout_toRightOf="@id/taskCheckbox"
        android:layout_centerVertical="true"
        android:textSize="20dp"
        android:id="@+id/taskName"/>
</RelativeLayout>